--- a/fracking/css/graph.css
+++ b/fracking/css/graph.css
@@ -14,6 +14,33 @@ div.graph {
    margin-bottom: 10px;
 }
 
+/** begin styles for "show key" link */
+.graph a {
+  color: #4599D3
+}
+.graph a.show-key {
+  font-size: 0.7em;
+  position: absolute;
+  top: 2.8em;
+  right: 2.25em;
+  z-index: 4;
+}
+.graph a:link {
+  text-decoration: none;
+}
+.graph a:visited {
+  text-decoration: none;
+}
+.graph a:hover {
+  text-decoration: underline;
+  color: #1B7FC3;
+}
+.graph a:active {
+  text-decoration: underline;
+  color: #1B7FC3;
+}
+/** end styles for "show key" link */
+
 .graph {
   position: relative;
   background: rgba(255, 255, 255, 0); }
